Install under /opt/ros/indigo. Skip python-catkin-pkg

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -9,12 +9,7 @@ ENV INITSYSTEM on
 ENV ROS_DISTRO indigo
 ENV ROS_CONFIG ros_comm
 ENV CATKIN_WS /usr/catkin_ws
-
-# ENV ROS_TOOLS "python-rosdep python-rosinstall-generator python-rosinstall python-catkin-tools"
-#
-# RUN echo "deb http://packages.ros.org/ros/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list \
-#     && apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net --recv-key 0xB01FA116
-#     && apt-get update && apt-get install -yq --no-install-recommends $ROS_TOOLS
+ENV ROS_INSTALL_DIR /opt/ros/$ROS_DISTRO
 
 RUN apt-get update && apt-get install -yq --no-install-recommends \
   build-essential
@@ -23,8 +18,8 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
 
 # Install ROS-related tools
 WORKDIR /usr
-COPY ./requirements.txt /requirements.txt
-RUN pip install -r /requirements.txt
+COPY ./requirements.txt .
+RUN pip install -r requirements.txt
 
 RUN rosdep init \
     && rosdep update
@@ -38,19 +33,21 @@ RUN rosinstall_generator $ROS_CONFIG --rosdistro $ROS_DISTRO \
     && wstool init src .rosinstall \
     && rosdep install --from-paths src --ignore-src --rosdistro $ROS_DISTRO -y \
        --skip-keys python-rosdep \
-       --skip-keys python-rospkg
+       --skip-keys python-rospkg \
+       --skip-keys python-catkin-pkg
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
+RUN mkdir -p $ROS_INSTALL_DIR
+
 RUN catkin init \
-    && catkin config --install --default-install-space \
-    --cmake-args -DCMAKE_BUILD_TYPE=Release \
+    && catkin config --install --install-space $ROS_INSTALL_DIR \
+       --cmake-args -DCMAKE_BUILD_TYPE=Release \
     && catkin build
 
 # TODO: Delete tars in src after installation
 
-COPY ./ros_entrypoint.sh $CATKIN_WS
-WORKDIR $CATKIN_WS
+COPY ./ros_entrypoint.sh .
 
 ENTRYPOINT ["bash", "ros_entrypoint.sh"]
 
