--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,22 +4,17 @@ FROM resin/%%RESIN_MACHINE_NAME%%-buildpack-deps
 MAINTAINER Spyros Maniatopoulos spmaniato@gmail.com
 
 # Switch on systemd init system in container
-ENV INITSYSTEM on
+ENV INITSYSTEM=on \
+    TERM=xterm
 
-ENV TERM xterm
-
-# ROS distribution and configuration
-ENV ROS_DISTRO indigo
-ENV ROS_CONFIG ros_comm
-ENV CATKIN_WS /usr/catkin_ws
-ENV ROS_INSTALL_DIR /opt/ros/$ROS_DISTRO
+# ROS distribution, configuration, and relevant directories
+ENV ROS_DISTRO="indigo" \
+    ROS_CONFIG="ros_comm" \
+    CATKIN_WS="/usr/catkin_ws" \
+    ROS_INSTALL_DIR="/opt/ros/$ROS_DISTRO"
 
 RUN apt-get update && apt-get install -yq --no-install-recommends \
-    build-essential \
-    python-dev \
-    python-pip
-
-# RUN ln -s /usr/lib/arm-linux-gnueabihf/liblog4cxx.so /usr/lib/
+    python-dev python-pip
 
 # Install ROS-related Python tools
 WORKDIR /usr
@@ -41,6 +36,8 @@ RUN rosinstall_generator $ROS_CONFIG --rosdistro $ROS_DISTRO \
        --skip-keys python-rospkg \
        --skip-keys python-catkin-pkg
 
+# RUN ln -s /usr/lib/arm-linux-gnueabihf/liblog4cxx.so /usr/lib/
+
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p $ROS_INSTALL_DIR
@@ -48,7 +45,7 @@ RUN mkdir -p $ROS_INSTALL_DIR
 RUN catkin init \
     && catkin config --install --install-space $ROS_INSTALL_DIR \
        --cmake-args -DCMAKE_BUILD_TYPE=Release \
-    && catkin build
+    && catkin build --no-status --no-summary --no-notify
 
 # TODO: Delete tars in src after installation
 
