--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,30 +1,29 @@
-# FROM resin/%%RESIN_MACHINE_NAME%%-python:2.7
 FROM resin/%%RESIN_MACHINE_NAME%%-buildpack-deps
 
 MAINTAINER Spyros Maniatopoulos spmaniato@gmail.com
 
-# Switch on systemd init system in container
-ENV INITSYSTEM=on \
-    TERM=xterm
+# Switch on systemd init system in container and set various other variables
+ENV INITSYSTEM="on" \
+    TERM="xterm" \
+    PYTHONIOENCODING="UTF-8"
 
-# ROS distribution, configuration, and relevant directories
+# Variables for ROS distribution, configuration, and relevant directories
 ENV ROS_DISTRO="indigo" \
-    ROS_CONFIG="ros_comm" \
-    CATKIN_WS="/usr/catkin_ws" \
+    ROS_CONFIG="ros_comm"
+ENV CATKIN_WS="/usr/catkin_ws" \
     ROS_INSTALL_DIR="/opt/ros/$ROS_DISTRO"
 
 RUN apt-get update && apt-get install -yq --no-install-recommends \
     python-dev python-pip
 
 # Install ROS-related Python tools
-WORKDIR /usr
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
 RUN rosdep init \
     && rosdep update
 
-RUN mkdir -p $CATKIN_WS/src
+RUN mkdir -p $CATKIN_WS/src $ROS_INSTALL_DIR
 
 WORKDIR $CATKIN_WS
 
@@ -36,18 +35,13 @@ RUN rosinstall_generator $ROS_CONFIG --rosdistro $ROS_DISTRO \
        --skip-keys python-rospkg \
        --skip-keys python-catkin-pkg
 
-# RUN ln -s /usr/lib/arm-linux-gnueabihf/liblog4cxx.so /usr/lib/
-
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-RUN mkdir -p $ROS_INSTALL_DIR
 
 RUN catkin init \
     && catkin config --install --install-space $ROS_INSTALL_DIR \
        --cmake-args -DCMAKE_BUILD_TYPE=Release \
-    && catkin build --no-status --no-summary --no-notify
-
-# TODO: Delete tars in src after installation
+    && catkin build --no-status --no-summary --no-notify \
+    && catkin clean -y --logs --build --devel
 
 COPY ./ros_entrypoint.sh .
 
